CHC-330: fixed set as buttons alignments, added project thumbnail to create collecction form

--- a/concordia/static/css/base.css
+++ b/concordia/static/css/base.css
@@ -473,7 +473,7 @@ input {
     left: 0;
     right: 0;
     bottom: 0;
-    margin-top: 40%;
+    margin-top: 5%;
     padding: .5rem 1.25rem;
 }
 
